# updates-provider

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
migrations/2021-03-02-090539_init/: down.sql  up.sql
migrations/2021-03-17-102343_exchange/: down.sql  up.sql
migrations/2021-04-21-090223_data_entries/: down.sql  up.sql
migrations/2021-05-24-054453_leasing_balance/: down.sql  up.sql
migrations/2021-06-18-123753_exchange_last_index/: down.sql  up.sql
migrations/2021-07-27-150014_add_transaction_uid/: down.sql  up.sql
migrations/2022-11-16-021314_key_frags/: down.sql  up.sql
migrations/2023-01-19-144655_exchange_pairs/: down.sql  up.sql
migrations/2023-03-13-083747_key_frags_idx/: down.sql  up.sql
src/: api.rs  asset_info.rs  config.rs  db.rs  decimal.rs  error.rs  errors.rs  main.rs  metrics.rs  models.rs  redis.rs  schema.rs  test_pairs.rs  utils.rs
src/db/: mod.rs  pool.rs  repo.rs  repo_consumer.rs  repo_provider.rs
src/providers/: blockchain_height.rs  configs.rs  mod.rs  requester.rs  states.rs  test_resources.rs  watchlist.rs
src/providers/blockchain/: handler.rs  height.rs  leasing_balance.rs  mod.rs  puller.rs  state.rs  states.rs  transactions.rs  updater.rs  updates.rs
src/providers/blockchain/provider/: exchange_pair.rs  leasing_balance.rs  mod.rs  state.rs  tests.rs  transaction.rs
src/providers/configs/: configs_updater.rs  mod.rs  repo.rs  watchlist.rs
src/providers/configs_from_gitlab/: configs_updater.rs  mod.rs  repo.rs  watchlist.rs
src/providers/polling/: configs.rs  mod.rs  requester.rs  states.rs  test_resources.rs
src/providers/test_resources/: mod.rs  repo.rs  updater.rs  watchlist.rs
src/resources/: mod.rs  repo.rs
src/subscriptions/: mod.rs  puller.rs  pusher.rs  repo.rs
src/transactions/: exchange.rs  mod.rs  repo.rs
src/utils/: mod.rs
src/waves/: mod.rs
src/waves/transactions/: exchange.rs  mod.rs
