[package]
name = "updates-provider"
version = "1.4.10"
authors = ["Аleksej Petrov <apetrov@wavesplatform.com>", "Alex Kordys <akordys@web3tech.ru>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake2 = "0.9"
bs58 = "0.3"
hex = "0.4"
envy = "0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
diesel = { version = "1.4", features = ["postgres", "chrono", "numeric", "serde_json"] }
deadpool = { version = "0.9", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.10", default-features = false, features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.3", default-features = false, features = ["postgres", "rt_tokio_1"] }
percent-encoding = "2.1"
prost = { version = "0.8", features = ["no-recursion-limit"] }
protofixer = { version = "0.1.0", git = "https://github.com/a-kordys/protofixer", tag = "v0.1.0" }
prometheus = "0.12"
regex = "1.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.8"
thiserror = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
url = "2.2"
warp = "0.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.0" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.12.2" }
wavesexchange_topic = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_topic/0.3.0" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "v1.4.3" }

[dev-dependencies]
base64 = "0.13"

[[bin]]
name = "service"
path = "src/main.rs"