[package]
name = "updates-provider"
version = "1.4.10"
authors = ["Аleksej Petrov <apetrov@wavesplatform.com>", "Alex Kordys <akordys@web3tech.ru>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
blake2 = "0.10"
bs58 = "0.4"
hex = "0.4"
envy = "0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1"
diesel = { version = "2", features = ["postgres", "chrono", "numeric", "serde_json"] }
deadpool = { version = "0.9", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.11", default-features = false, features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.4", default-features = false, features = ["postgres", "rt_tokio_1"] }
percent-encoding = "2.1"
protofixer = { version = "0.1.0", git = "https://github.com/a-kordys/protofixer", tag = "v0.1.0" }
prometheus = "0.13"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
warp = "0.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.4" }
wavesexchange_topic = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_topic/0.4.1" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.4.3-1" }

[dev-dependencies]
base64 = "0.20"

[[bin]]
name = "service"
path = "src/main.rs"