[package]
name = "updates-provider"
version = "1.5.2"
authors = ["Аleksej Petrov <apetrov@wavesplatform.com>", "Alex Kordys <akordys@uniqsoft.ae>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
blake2 = "0.10"
bs58 = "0.5"
bigdecimal = "0.4"
hex = "0.4"
envy = "0.4"
futures = "0.3"
itertools = "0.12"
lazy_static = "1"
diesel = { version = "2.1", features = ["postgres", "chrono", "numeric", "serde_json"] }
deadpool = { version = "0.10", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.14", default-features = false, features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.5", default-features = false, features = ["postgres", "rt_tokio_1"] }

percent-encoding = "2.1"
protofixer = { version = "0.1.0", git = "https://github.com/a-kordys/protofixer", tag = "v0.1.0" }
prometheus = "0.13"
regex = "1"
reqwest = "0.11"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
warp = { version = "0.3", default-features = false }
wavesexchange_apis = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_apis/0.1.39" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_liveness = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_liveness/0.3.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.10" }
wavesexchange_topic = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_topic/0.4.3" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }

[dev-dependencies]
base64 = "0.21"

[[bin]]
name = "service"
path = "src/main.rs"
